# copynesl

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  bootstrap.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
cartctl/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap.sh  config.status  configure  configure.ac  libtool
cartctl/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3t
cartctl/cartctl/: Makefile  Makefile.am  Makefile.in  inesutils.c  nes.h  nesutils.c  nesutils.h  unifutils.c
cartctl/cartctl/.deps/: nesutils.Plo  unifutils.Plo
cartctl/sample/: sample.c
copynesl/: Makefile  Makefile.am  Makefile.in  Makefile.old  configfile.c  convert.c  convert.h  copynes.c  copynesl.c  dump_cart.c  errorcodes.h  input.c  input.h  io_opts.c  nes.h  options.c  options.h  output.c  output.h  plugins.c  plugins.h  unif.c  unif.h
copynesl/.deps/: bcn.Po  bcn.Tpo  copynes.Po  copynesl.Po  dump_cart.Po  options.Po  plugins.Po
data/: Makefile  Makefile.am  Makefile.in  copyrght.txt
data/plugins/: Makefile  Makefile.am  Makefile.in
man/: Makefile  Makefile.am  Makefile.in  copynesl.1
settings/: Makefile  Makefile.am  Makefile.in  array.c  array.h  dir.c  dir.h  expand_var.c  settings.c  settings.h
settings/.deps/: array.Po  dir.Po  settings.Po  test_array.Po  test_dir.Po  test_settings.Po
settings/tests/: test_array.c  test_dir.c  test_settings.c
settings/tests/.deps/: settings_test.Po
trk_log/: Makefile  Makefile.am  Makefile.in  trk_log.c  trk_log.h
trk_log/.deps/: trk_log.Po
