AC_INIT(cartctl Library, 0.02, cradelit@gmail.com, cartcrl)
AC_PREREQ(2.63)
AC_COPYRIGHT(GNU Library General Public License)
AC_REVISION($Revision$)
AC_CONFIG_SRCDIR(cartctl/nes.h)
AM_INIT_AUTOMAKE([$PACKAGE_TARNAME], [$PACKAGE_VERSION])
AC_PROG_CC
AM_PROG_LIBTOOL
AC_CONFIG_FILES([Makefile cartctl/Makefile])
AC_OUTPUT

