plugindir=$(datarootdir)/@PACKAGE@/plugins
plugin_DATA=\
103in1.bin  4in1.bin      999in1.bin    clear.bin   family.bin    hkromw.bin    nam118a.bin   pp.bin       sachen4.bin  sxrom.bin     vrc3.bin\
115in1.bin  52in1.bin     Makefile.am   cm017.bin   fdsdump.bin   insts.bin     namco106.bin  pplite.bin   sachen5.bin  sxromw.bin    vrc4.bin\
117in1.bin  63in1.bin     a52.bin       cnram.bin   fme7.bin      jf09.bin      nescopy.bin   ppold.bin    sachen6.bin  t3h53.bin     vrc6.bin\
11in1.bin   700in1.bin    ark2.bin      cnrom.bin   gar.bin       jovial.bin    nescopyn.bin  pxrom.bin    sachen7.bin  tekken.bin    vrc7.bin\
150in1.bin  74ls374n.bin  axrom.bin     cony1.bin   gardn.bin     k3966.bin     nina001.bin   qj.bin       sachen8.bin  test.bin\
15in1.bin   76in1.bin     bankwtch.bin  cony2.bin   garset.bin    mario.bin     nina0x.bin    r4in1.bin    sachen9.bin  test2.bin\
16in1a.bin  7in1.bin      bio.bin       copyn1.bin  garup.bin     mario15.bin   nrom.bin      racer.bin    sdk.bin      tqrom.bin\
1min1.bin   7in1x.bin     bio2.bin      cprom.bin   girlfght.bin  mhrom.bin     nromx.bin     ram.bin      smb2ja.bin   txram.bin\
1min1a.bin  800008.bin    bnrom.bin     dd2.bin     glider.bin    microbug.bin  ns03.bin      rambo1.bin   smb2jc.bin   txrom1.bin\
20in1.bin   800042.bin    caltron.bin   disk.bin    gnrom.bin     mimic1.bin    nwc.bin       rdump1.bin   src          txromw.bin\
20in1a.bin  8259b.bin     cameric2.bin  ewj2.bin    hik.bin       mirror.bin    pir8.bin      rdump2.bin   study.bin    unrom.bin\
210in1.bin  8259c.bin     camerica.bin  exram.bin   hik4in1b.bin  mmc5plug.bin  pir8smb3.bin  regtest.bin  sunsft4.bin  uorom.bin\
255in1.bin  8259d.bin     cdreams.bin   exrom.bin   hkram.bin     monty.bin     pokeahin.bin  sachen2.bin  superj.bin   usbbios4.bin\
42in1.bin   95in1.bin     cheetah.bin   exromw.bin  hkrom.bin     nam109.bin    powerj.bin    sachen3.bin  sxram.bin    uxram.bin

